--- a/package.json
+++ b/package.json
@@ -105,6 +105,8 @@
     "rollup-plugin-filesize-check": "0.0.1",
     "rollup-plugin-terser": "7.0.2",
     "shelljs": "0.8.4",
+    "spacetime": "^6.16.3",
+    "spacetime-holiday": "^0.1.0",
     "suffix-thumb": "2.0.0",
     "tap-dancer": "0.3.4",
     "tape": "5.3.2"
