--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "flame": "clinic flame -- node ./scripts/perf/flame",
     "lint": "eslint ./src/**/* && eslint ./plugins/**/src/*",
     "watch": "amble ./scratch.js",
+    "watch:dates": "amble ./plugins/dates/scratch.js",
+    "watch:speech": "amble ./plugins/speech/scratch.js",
     "build:all": "node ./scripts/build/build-all.js && npm run build --silent",
     "plugins": "node ./scripts/plugin-check.js --silent",
     "plugins:install": "node ./scripts/plugins.js npm install",
@@ -94,7 +96,6 @@
     "grad-school": "0.0.4"
   },
   "devDependencies": {
-    "@rollup/plugin-alias": "3.1.8",
     "amble": "1.3.0",
     "codecov": "3.8.3",
     "eslint": "8.3.0",
@@ -102,11 +103,10 @@
     "nlp-corpus": "^4.2.0",
     "nyc": "15.1.0",
     "rollup": "2.60.1",
+    "@rollup/plugin-alias": "3.1.8",
     "rollup-plugin-filesize-check": "0.0.1",
     "rollup-plugin-terser": "7.0.2",
     "shelljs": "0.8.4",
-    "spacetime": "^6.16.3",
-    "spacetime-holiday": "^0.1.0",
     "suffix-thumb": "2.0.0",
     "tap-dancer": "0.3.4",
     "tape": "5.3.2"
