--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
   "author": "Spencer Kelly <spencermountain@gmail.com> (http://spencermounta.in)",
   "name": "compromise",
   "description": "modest natural language processing",
-  "version": "13.11.5-next",
-  "main": "./builds/compromise.cjs",
-  "unpkg": "./builds/compromise.cjs",
-  "module": "./builds/compromise.mjs",
+  "version": "13.11.4-rc2",
+  "main": "./builds/three/compromise.js",
+  "unpkg": "./builds/three/compromise.js",
+  "module": "./builds/three/compromise-three.mjs",
   "type": "module",
   "types": "builds/types.d.ts",
   "sideEffects": false,
   "exports": {
     ".": {
-      "require": "./builds/compromise.cjs",
-      "import": "./builds/compromise.mjs",
-      "default": "./builds/compromise.cjs"
+      "require": "./builds/three/compromise-three.cjs",
+      "import": "./builds/three/compromise-three.mjs",
+      "default": "./builds/three/compromise-three.cjs"
     },
     "./tokenize": {
       "import": "./builds/one/compromise-one.mjs",
@@ -30,14 +30,6 @@
     "./three": {
       "import": "./builds/three/compromise-three.mjs",
       "default": "./builds/three/compromise-three.cjs"
-    },
-    "./three/dates": {
-      "import": "./builds/three/compromise-dates.mjs",
-      "default": "./builds/three/compromise-dates.cjs"
-    },
-    "./three/redact": {
-      "import": "./builds/three/compromise-redact.mjs",
-      "default": "./builds/three/compromise-redact.cjs"
     }
   },
   "repository": {
@@ -97,6 +89,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-alias": "3.1.8",
+    "@rollup/plugin-node-resolve": "^13.0.6",
     "amble": "1.3.0",
     "codecov": "3.8.3",
     "eslint": "8.4.1",
@@ -114,7 +107,6 @@
   "eslintIgnore": [
     "builds/*.js",
     "*.ts",
-    "plugins/**",
     "_old/**",
     "_tests/**"
   ],
