--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "author": "Spencer Kelly <spencermountain@gmail.com> (http://spencermounta.in)",
   "name": "compromise",
   "description": "modest natural language processing",
-  "version": "13.11.4-rc2",
-  "main": "./builds/three/compromise.js",
-  "unpkg": "./builds/three/compromise.js",
+  "version": "13.11.4-rc4",
+  "main": "./builds/compromise.js",
+  "unpkg": "./builds/compromise.js",
   "module": "./builds/three/compromise-three.mjs",
   "type": "module",
   "types": "builds/types.d.ts",
