--- a/package.json
+++ b/package.json
@@ -90,20 +90,21 @@
   },
   "devDependencies": {
     "@rollup/plugin-alias": "3.1.8",
-    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@rollup/plugin-node-resolve": "13.1.1",
     "amble": "1.3.0",
     "codecov": "3.8.3",
-    "eslint": "8.4.1",
+    "eslint": "8.5.0",
     "eslint-plugin-regexp": "1.5.1",
+    "minimum-model": "^0.0.1",
     "nlp-corpus": "^4.2.0",
     "nyc": "15.1.0",
-    "rollup": "2.61.0",
+    "rollup": "2.62.0",
     "rollup-plugin-filesize-check": "0.0.1",
     "rollup-plugin-terser": "7.0.2",
     "shelljs": "0.8.4",
-    "suffix-thumb": "2.0.0",
+    "suffix-thumb": "^3.0.0",
     "tap-dancer": "0.3.4",
-    "tape": "5.3.2"
+    "tape": "5.4.0"
   },
   "eslintIgnore": [
     "builds/*.js",
