--- a/plugins/wikipedia/package.json
+++ b/plugins/wikipedia/package.json
@@ -16,6 +16,7 @@
     "watch": "amble ./scratch.js",
     "generate": "node ./scripts/generate/index.js",
     "stat": "node ./scripts/stat.js",
+    "perf": "node ./scripts/perf.js",
     "build": "rollup -c --silent"
   },
   "peerDependencies": {
