--- a/plugins/dates/package.json
+++ b/plugins/dates/package.json
@@ -17,6 +17,7 @@
     "test": "tape \"./tests/**/*.test.js\" | tap-dancer  --color always",
     "testb": "TESTENV=prod tape \"./tests/**/*.test.js\" | tap-dancer  --color always",
     "watch": "amble ./scratch.js",
+    "perf": "node ./scripts/perf.js",
     "build": "rollup -c --silent"
   },
   "files": [
