--- a/plugins/wikipedia/package.json
+++ b/plugins/wikipedia/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "compromise-plugin-wikipedia",
+  "name": "compromise-wikipedia",
   "description": "plugin for nlp-compromise",
   "version": "0.0.0",
   "author": "Spencer Kelly <spencermountain@gmail.com> (http://spencermounta.in)",
-  "main": "./src/index.js",
+  "main": "./src/plugin.js",
   "type": "module",
+  "sideEffects": false,
+  "exports": {
+    ".": {
+      "import": "./src/plugin.js",
+      "require": "./builds/compromise-wikipedia.cjs"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/spencermountain/compromise.git"
   },
-  "homepage": "https://github.com/spencermountain/compromise/tree/master/plugins",
+  "homepage": "https://github.com/spencermountain/compromise/tree/master/plugins/wikipedia",
   "scripts": {
     "test": "tape \"./tests/**/*.test.js\" | tap-dancer  --color always",
     "testb": "TESTENV=prod tape \"./tests/**/*.test.js\" | tap-dancer  --color always",
