some work on types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
-  "files": ["builds/types.d.ts"],
-  "include": ["builds/index.d.ts"]
+  "files": [
+    "types/types.d.ts"
+  ],
+  "include": [
+    "builds/index.d.ts"
+  ]
 }
