--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./src/index.js",
   "unpkg": "./builds/compromise.js",
   "type": "module",
-  "types": "types/types.d.ts",
+  "types": "types/three.d.ts",
   "sideEffects": false,
   "exports": {
     ".": {
@@ -53,6 +53,7 @@
   },
   "scripts": {
     "build": "npm run version && rollup -c --silent",
+    "watch": "amble ./scratch.js",
     "pack": "node ./scripts/pack.js",
     "version": "node ./scripts/version.js",
     "test": "tape \"./tests/**/*.test.js\" | tap-dancer",
@@ -60,11 +61,8 @@
     "test:one": "tape \"./tests/one/**/*.test.js\" | tap-dancer",
     "test:two": "tape \"./tests/two/**/*.test.js\" | tap-dancer",
     "test:three": "tape \"./tests/three/**/*.test.js\" | tap-dancer",
-    "test:four": "tape \"./tests/four/**/*.test.js\" | tap-dancer",
-    "test:match": "tape \"./tests/*/match.test.js\" | tap-dancer",
-    "test:penn": "tape \"./tests/two/tagger/penn.test.js\" | tap-dancer",
     "test:smoke": "tape \"./scripts/test/smoke.test.js\" | tap-dancer",
-    "test:dates": "tape \"./plugins/dates/tests/**/*.test.js\" | tap-dancer",
+    "test:plugins": "tape \"./plugins/**/tests/**/*.test.js\" | tap-dancer",
     "debug": "node ./scripts/debug.js",
     "match": "node ./scripts/match.js",
     "coverage": "c8 -r lcov -n 'src/**/*' -n 'plugins/**/*' npm run test",
@@ -72,15 +70,8 @@
     "perf": "node ./scripts/perf/index.js",
     "flame": "clinic flame -- node ./scripts/perf/flame",
     "lint": "eslint ./src/**/* && eslint ./plugins/**/src/*",
-    "watch": "amble ./scratch.js",
-    "watch:dates": "amble ./plugins/dates/scratch.js",
-    "watch:speech": "amble ./plugins/speech/scratch.js",
-    "build:all": "node ./scripts/build/build-all.js && npm run build --silent",
-    "plugins": "node ./scripts/plugin-check.js --silent",
-    "plugins:install": "node ./scripts/plugins.js npm install",
     "plugins:ci": "node ./scripts/plugins.js npm ci",
-    "plugins:build": "node ./scripts/plugins.js npm run build",
-    "demo": "python -m SimpleHTTPServer 8888"
+    "plugins:build": "node ./scripts/plugins.js npm run build"
   },
   "files": [
     "plugins/",
@@ -108,11 +99,10 @@
     "@rollup/plugin-node-resolve": "13.1.3",
     "amble": "1.3.0",
     "codecov": "3.8.3",
-    "eslint": "8.9.0",
-    "eslint-plugin-regexp": "1.5.1",
-    "minimum-model": "^0.0.1",
+    "eslint": "8.11.0",
+    "eslint-plugin-regexp": "1.6.0",
     "nlp-corpus": "^4.2.0",
-    "rollup": "2.68.0",
+    "rollup": "2.70.1",
     "rollup-plugin-filesize-check": "0.0.1",
     "rollup-plugin-terser": "7.0.2",
     "shelljs": "0.8.5",
