linting, ghub scripts

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -31,7 +31,7 @@ jobs:
       - name: install
         run: |
           npm ci
-          npm i --no-save ts-node typescript
+          # npm i --no-save ts-node typescript
           npm run plugins:ci
 
       - name: static checks
@@ -49,5 +49,5 @@ jobs:
           npm run test:smoke
           npm run testb
           # npm run perf
-          npm run test:types
+          # npm run test:types
           # npm run test:stress
