--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Spencer Kelly <spencermountain@gmail.com> (http://spencermounta.in)",
   "name": "compromise",
   "description": "modest natural language processing",
-  "version": "13.11.4-rc6",
+  "version": "13.11.4-rc7",
   "main": "./src/index.js",
   "unpkg": "./builds/compromise.js",
   "type": "module",
@@ -36,10 +36,10 @@
         "types/one.d.ts"
       ],
       "two": [
-        "build/two.d.ts"
+        "types/two.d.ts"
       ],
       "three": [
-        "build/three.d.ts"
+        "types/three.d.ts"
       ]
     }
   },
