--- a/plugins/speech/package.json
+++ b/plugins/speech/package.json
@@ -1,7 +1,7 @@
 {
   "name": "compromise-speech",
   "description": "plugin for nlp-compromise",
-  "version": "0.0.1-next",
+  "version": "0.0.1",
   "author": "Spencer Kelly <spencermountain@gmail.com> (http://spencermounta.in)",
   "main": "./src/plugin.js",
   "unpkg": "./builds/compromise-speech.min.js",
@@ -30,7 +30,7 @@
     "builds/*.js"
   ],
   "peerDependencies": {
-    "compromise": ">=12.0.0"
+    "compromise": ">=14.0.0"
   },
   "dependencies": {},
   "devDependencies": {},
