turn off ci check temporarily

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           npm ci
           # npm i --no-save ts-node typescript
-          npm run plugins:ci
+          # npm run plugins:ci
 
       - name: static checks
         run: |
