--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -47,7 +47,8 @@ jobs:
       - name: test
         run: |
           npm run test:smoke
-          npm run testb
+          npm run test
+          # npm run testb
           # npm run perf
           # npm run test:types
           # npm run test:stress
