--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           npm ci
           # npm i --no-save ts-node typescript
-          # npm run plugins:ci
+          npm run plugins:ci
 
       - name: static checks
         run: |
