--- a/plugins/wikipedia/package.json
+++ b/plugins/wikipedia/package.json
@@ -1,9 +1,10 @@
 {
   "name": "compromise-wikipedia",
   "description": "plugin for nlp-compromise",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "Spencer Kelly <spencermountain@gmail.com> (http://spencermounta.in)",
   "main": "./src/plugin.js",
+  "unpkg": "./builds/compromise-wikipedia.min.js",
   "type": "module",
   "sideEffects": false,
   "exports": {
