--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -25,4 +25,6 @@ jobs:
 
       - run: npm ci
       - run: npm i --no-save c8
-      - run: npm run codecov
+      - run: npm i --no-save codecov
+      - run: c8 -r lcov -n 'src/**/*' -n 'plugins/**/*' npm run test && codecov -t 15039ad1-b495-48cd-b4a0-bcf124c9b318
+      # - run: npm run codecov
