--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "author": "Spencer Kelly <spencermountain@gmail.com> (http://spencermounta.in)",
   "name": "compromise",
   "description": "modest natural language processing",
-  "version": "14.1.0",
-  "main": "./src/index.js",
+  "version": "14.1.1",
+  "main": "./src/three.js",
   "unpkg": "./builds/compromise.js",
   "type": "module",
   "types": "types/three.d.ts",
