--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Spencer Kelly <spencermountain@gmail.com> (http://spencermounta.in)",
   "name": "compromise",
   "description": "modest natural language processing",
-  "version": "14.1.2",
+  "version": "14.2.0-rc1",
   "main": "./src/three.js",
   "unpkg": "./builds/compromise.js",
   "type": "module",
