--- a/plugins/stats/package.json
+++ b/plugins/stats/package.json
@@ -7,6 +7,7 @@
   "unpkg": "./builds/compromise-stats.min.js",
   "type": "module",
   "module": "./builds/compromise-stats.mjs",
+  "types": "index.d.ts",
   "sideEffects": false,
   "exports": {
     ".": {
