--- a/plugins/speed/package.json
+++ b/plugins/speed/package.json
@@ -7,6 +7,7 @@
   "unpkg": "./builds/compromise-speed.min.js",
   "module": "./builds/compromise-speed.mjs",
   "type": "module",
+  "types": "index.d.ts",
   "sideEffects": false,
   "exports": {
     ".": {
