--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Spencer Kelly <spencermountain@gmail.com> (http://spencermounta.in)",
   "name": "compromise",
   "description": "modest natural language processing",
-  "version": "14.2.0-rc2",
+  "version": "14.2.0",
   "main": "./src/three.js",
   "unpkg": "./builds/compromise.js",
   "type": "module",
@@ -95,12 +95,12 @@
   },
   "devDependencies": {
     "@rollup/plugin-alias": "3.1.9",
-    "@rollup/plugin-node-resolve": "13.2.1",
+    "@rollup/plugin-node-resolve": "13.3.0",
     "amble": "1.3.0",
-    "eslint": "8.14.0",
+    "eslint": "8.16.0",
     "eslint-plugin-regexp": "1.7.0",
-    "nlp-corpus": "^4.2.0",
-    "rollup": "2.70.2",
+    "nlp-corpus": "4.3.0",
+    "rollup": "2.75.5",
     "rollup-plugin-filesize-check": "0.0.1",
     "rollup-plugin-terser": "7.0.2",
     "shelljs": "0.8.5",
