--- a/plugins/speed/package.json
+++ b/plugins/speed/package.json
@@ -35,7 +35,7 @@
     "compromise": ">=14.0.0"
   },
   "devDependencies": {
-    "compromise": "^14.1.2"
+    "compromise": "14.3.1"
   },
   "license": "MIT"
 }
