--- a/plugins/speed/package.json
+++ b/plugins/speed/package.json
@@ -35,7 +35,8 @@
     "compromise": ">=14.0.0"
   },
   "devDependencies": {
-    "compromise": "14.3.1"
+    "compromise": "14.3.1",
+    "nlp-corpus": "^4.4.0"
   },
   "license": "MIT"
 }
