--- a/plugins/paragraphs/package.json
+++ b/plugins/paragraphs/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "compromise-speed",
+  "name": "compromise-paragraphs",
   "description": "plugin for nlp-compromise",
-  "version": "0.1.1",
+  "version": "0.1.0",
   "author": "Spencer Kelly <spencermountain@gmail.com> (http://spencermounta.in)",
   "main": "./src/plugin.js",
-  "unpkg": "./builds/compromise-speed.min.js",
-  "module": "./builds/compromise-speed.mjs",
+  "unpkg": "./builds/compromise-paragraphs.min.js",
+  "module": "./builds/compromise-paragraphs.mjs",
   "type": "module",
   "types": "index.d.ts",
   "sideEffects": false,
   "exports": {
     ".": {
       "import": "./src/plugin.js",
-      "require": "./builds/compromise-speed.cjs"
+      "require": "./builds/compromise-paragraphs.cjs"
     }
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/spencermountain/compromise.git"
   },
-  "homepage": "https://github.com/spencermountain/compromise/tree/master/plugins/speed",
+  "homepage": "https://github.com/spencermountain/compromise/tree/master/plugins/paragraphs",
   "scripts": {
     "test": "tape \"./tests/**/*.test.js\" | tap-dancer  --color always",
     "testb": "TESTENV=prod tape \"./tests/**/*.test.js\" | tap-dancer  --color always",
@@ -34,9 +34,6 @@
   "peerDependencies": {
     "compromise": ">=14.0.0"
   },
-  "devDependencies": {
-    "compromise": "14.3.1",
-    "nlp-corpus": "^4.4.0"
-  },
+  "devDependencies": {},
   "license": "MIT"
 }
