fix speed plugin deps

--- a/plugins/speed/package.json
+++ b/plugins/speed/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "compromise-paragraphs",
+  "name": "compromise-speed",
   "description": "plugin for nlp-compromise",
   "version": "0.1.1",
   "author": "Spencer Kelly <spencermountain@gmail.com> (http://spencermounta.in)",
   "main": "./src/plugin.js",
-  "unpkg": "./builds/compromise-paragraphs.min.js",
-  "module": "./builds/compromise-paragraphs.mjs",
+  "unpkg": "./builds/compromise-speed.min.js",
+  "module": "./builds/compromise-speed.mjs",
   "type": "module",
   "types": "index.d.ts",
   "sideEffects": false,
   "exports": {
     ".": {
       "import": "./src/plugin.js",
-      "require": "./builds/compromise-paragraphs.cjs"
+      "require": "./builds/compromise-speed.cjs"
     }
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/spencermountain/compromise.git"
   },
-  "homepage": "https://github.com/spencermountain/compromise/tree/master/plugins/paragraphs",
+  "homepage": "https://github.com/spencermountain/compromise/tree/master/plugins/speed",
   "scripts": {
     "test": "tape \"./tests/**/*.test.js\" | tap-dancer  --color always",
     "testb": "TESTENV=prod tape \"./tests/**/*.test.js\" | tap-dancer  --color always",
@@ -36,7 +36,6 @@
     "compromise": ">=14.0.0"
   },
   "devDependencies": {
-    "compromise": "14.3.1",
     "nlp-corpus": "^4.4.0"
   },
   "license": "MIT"
