fix more typing files for plugins

--- a/plugins/paragraphs/package.json
+++ b/plugins/paragraphs/package.json
@@ -28,8 +28,7 @@
   },
   "files": [
     "builds/",
-    "src/",
-    "index.d.ts"
+    "src/"
   ],
   "peerDependencies": {
     "compromise": ">=14.0.0"
