Modify package.json files for all plugins to use export-specific `.d.ts` file references, to fix TS import errors

--- a/plugins/dates/package.json
+++ b/plugins/dates/package.json
@@ -7,12 +7,12 @@
   "unpkg": "./builds/compromise-dates.min.js",
   "module": "./builds/compromise-dates.mjs",
   "type": "module",
-  "types": "index.d.ts",
   "sideEffects": false,
   "exports": {
     ".": {
       "import": "./src/plugin.js",
-      "require": "./builds/compromise-dates.cjs"
+      "require": "./builds/compromise-dates.cjs",
+      "types": "./index.d.ts"
     }
   },
   "repository": {
