--- a/plugins/stats/package.json
+++ b/plugins/stats/package.json
@@ -7,12 +7,12 @@
   "unpkg": "./builds/compromise-stats.min.js",
   "type": "module",
   "module": "./builds/compromise-stats.mjs",
-  "types": "index.d.ts",
   "sideEffects": false,
   "exports": {
     ".": {
       "import": "./src/plugin.js",
-      "require": "./builds/compromise-stats.cjs"
+      "require": "./builds/compromise-stats.cjs",
+      "types": "./index.d.ts"
     }
   },
   "repository": {
