Added fallback top-level `types` fields to support TypeScript versions earlier than 4.5

--- a/plugins/stats/package.json
+++ b/plugins/stats/package.json
@@ -8,6 +8,7 @@
   "type": "module",
   "module": "./builds/compromise-stats.mjs",
   "sideEffects": false,
+  "types": "./index.d.ts",
   "exports": {
     ".": {
       "import": "./src/plugin.js",
