--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "unpkg": "./builds/compromise.js",
   "type": "module",
   "sideEffects": false,
+  "types": "./types/three.d.ts",
   "exports": {
     ".": {
       "import": "./src/three.js",
