--- a/plugins/speech/package.json
+++ b/plugins/speech/package.json
@@ -8,6 +8,7 @@
   "module": "./builds/compromise-speech.mjs",
   "type": "module",
   "sideEffects": false,
+  "types": "./index.d.ts",
   "exports": {
     ".": {
       "import": "./src/plugin.js",
