Bring back the `typesVersions` field to package.json for backwards compatibility for old TS versions, although it is not needed on TypeScript 4.5+, and may not be 100% effective.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,19 @@
       "types": "./types/three.d.ts"
     }
   },
+  "typesVersions": {
+    "*": {
+      "one": [
+        "./types/one.d.ts"
+      ],
+      "two": [
+        "./types/two.d.ts"
+      ],
+      "three": [
+        "./types/three.d.ts"
+      ]
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/spencermountain/compromise.git"
