--- a/package.json
+++ b/package.json
@@ -101,14 +101,14 @@
     "suffix-thumb": "5.0.2"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "15.0.1",
+    "@rollup/plugin-node-resolve": "15.0.2",
+    "@rollup/plugin-terser": "^0.4.1",
     "amble": "1.3.0",
-    "eslint": "8.39.0",
-    "eslint-plugin-regexp": "1.14.0",
+    "eslint": "8.40.0",
+    "eslint-plugin-regexp": "1.15.0",
     "nlp-corpus": "4.4.0",
-    "rollup": "3.7.4",
-    "rollup-plugin-filesize-check": "0.0.2",
-    "rollup-plugin-terser": "7.0.2",
+    "rollup": "3.21.5",
+    "rollup-plugin-filesize-check": "^0.0.2",
     "shelljs": "0.8.5",
     "tap-dancer": "0.3.4",
     "tape": "5.6.3"
