add cross-env dep

--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "pack": "node ./scripts/pack.js",
     "version": "node ./scripts/version.js",
     "test": "tape \"./tests/**/*.test.js\" | tap-dancer",
-    "testb": "npm run test:smoke && TESTENV=prod npm run test",
+    "testb": "npm run test:smoke && cross-env TESTENV=prod npm run test",
     "test:one": "tape \"./tests/one/**/*.test.js\" | tap-dancer",
     "test:two": "tape \"./tests/two/**/*.test.js\" | tap-dancer",
     "test:three": "tape \"./tests/three/**/*.test.js\" | tap-dancer",
@@ -104,6 +104,7 @@
     "@rollup/plugin-node-resolve": "15.0.2",
     "@rollup/plugin-terser": "^0.4.1",
     "amble": "1.3.0",
+    "cross-env": "^7.0.3",
     "eslint": "8.40.0",
     "eslint-plugin-regexp": "1.15.0",
     "nlp-corpus": "4.4.0",
