--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Spencer Kelly <spencermountain@gmail.com> (http://spencermounta.in)",
   "name": "compromise",
   "description": "modest natural language processing",
-  "version": "14.9.0",
+  "version": "14.10.0",
   "module": "./src/three.js",
   "main": "./src/three.js",
   "unpkg": "./builds/compromise.js",
@@ -103,17 +103,17 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "15.0.2",
-    "@rollup/plugin-terser": "^0.4.1",
+    "@rollup/plugin-terser": "0.4.3",
     "amble": "1.3.0",
     "cross-env": "^7.0.3",
-    "eslint": "8.40.0",
+    "eslint": "8.46.0",
     "eslint-plugin-regexp": "1.15.0",
     "nlp-corpus": "4.4.0",
     "rollup": "3.21.5",
     "rollup-plugin-filesize-check": "^0.0.2",
     "shelljs": "0.8.5",
     "tap-dancer": "0.3.4",
-    "tape": "5.6.3"
+    "tape": "5.6.6"
   },
   "eslintIgnore": [
     "builds/*.js",
