fix gh workflow

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -31,6 +31,7 @@ jobs:
       - name: install
         run: |
           npm ci
+          npm run plugins:ci
 
       - name: static checks
         run: |
