--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,20 +14,13 @@ jobs:
     # delegate to the build- and-test workflow, but I haven't found a way to do
     # that yet.
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
           node-version: 16.x
-
-      - name: cache dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-npm-10.x-${{ hashFiles('package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm-10.x-
-            ${{ runner.os }}-npm-
+          cache: npm
+          cache-dependency-path: package-lock.json
 
       - name: install
         run: |
