update rollup plugin, 14.14.0rc2

--- a/package.json
+++ b/package.json
@@ -122,7 +122,7 @@
     "eslint-plugin-regexp": "2.6.0",
     "nlp-corpus": "4.4.0",
     "rollup": "4.19.1",
-    "rollup-plugin-filesize-check": "^0.0.2",
+    "rollup-plugin-filesize-check": "1.2.0",
     "shelljs": "0.8.5",
     "tap-dancer": "0.3.4",
     "tape": "5.8.1"
