use native node watch

--- a/plugins/paragraphs/package.json
+++ b/plugins/paragraphs/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "test": "tape \"./tests/**/*.test.js\" | tap-dancer  --color always",
     "testb": "TESTENV=prod tape \"./tests/**/*.test.js\" | tap-dancer  --color always",
-    "watch": "amble ./scratch.js",
+    "watch": "node --watch ./scratch.js",
     "build": "rollup -c --silent"
   },
   "files": [
