--- a/plugins/wikipedia/package.json
+++ b/plugins/wikipedia/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "test": "tape \"./tests/**/*.test.js\" | tap-dancer  --color always",
     "testb": "TESTENV=prod tape \"./tests/**/*.test.js\" | tap-dancer  --color always",
-    "watch": "amble ./scratch.js",
+    "watch": "node --watch ./scratch.js",
     "generate": "node ./scripts/generate/index.js",
     "stat": "node ./scripts/stat.js",
     "perf": "node ./scripts/perf.js",
