--- a/package.json
+++ b/package.json
@@ -71,8 +71,7 @@
   },
   "scripts": {
     "build": "npm run version && rollup -c --silent",
-    "watch": "amble ./scratch.js",
-    "watch:tag": "amble ./tagger.scratch.js",
+    "watch": "node --watch scratch.js",
     "pack": "node ./scripts/pack.js",
     "version": "node ./scripts/version.js",
     "test": "tape \"./tests/**/*.test.js\" | tap-dancer",
@@ -116,7 +115,6 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "15.2.3",
     "@rollup/plugin-terser": "0.4.4",
-    "amble": "1.3.0",
     "cross-env": "^7.0.3",
     "eslint": "9.8.0",
     "eslint-plugin-regexp": "2.6.0",
