--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -13,14 +13,15 @@ jobs:
       contents: read
   
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           persist-credentials: false
 
-      - uses: actions/setup-node@v4
+      - uses: actions/setup-node@cdca7365b2dadb8aad0a33bc7601856ffabcc48e # v4.3.0
         with:
           node-version: '20'
           cache: npm
+          check-latest: true
 
       - run: npm ci
       - run: npm i -g c8 codecov
